--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+# Documentation: https://help.github.com/en/github/working-with-github-pages/about-github-pages-and-jekyll
 theme: jekyll-theme-slate
+title: Brainite.org
+description: Open Source Projects
