--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@
 theme: jekyll-theme-slate
 title: Brainite.org
 description: Open Source Projects
+
+# On custom themes, this would disable "View on Github"
 github:
   is_project_page: false
