--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Documentation: https://help.github.com/en/github/working-with-github-pages/about-github-pages-and-jekyll
 theme: jekyll-theme-slate
-title: Brainite.org
+title: Brainite
 description: Open Source Projects
 
 # On custom themes, this would disable "View on Github"
