--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,6 @@ description: Open Source Projects
 # On custom themes, this would disable "View on Github"
 github:
   is_project_page: false
+
+# Track site analytics
+google_analytics: UA-159056977-1
